--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        ktxVersion = '1.9.8-b1'
     }
 
     repositories {
@@ -90,6 +91,9 @@ project(":core") {
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+        compile "io.github.libktx:ktx-app:$ktxVersion"
+        compile "io.github.libktx:ktx-assets:$ktxVersion"
+        compile "io.github.libktx:ktx-inject:$ktxVersion"
     }
 }
 
