--- a/build.gradle
+++ b/build.gradle
@@ -93,7 +93,9 @@ project(":core") {
         compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
         compile "io.github.libktx:ktx-app:$ktxVersion"
         compile "io.github.libktx:ktx-assets:$ktxVersion"
+        compile "io.github.libktx:ktx-async:$ktxVersion"
         compile "io.github.libktx:ktx-inject:$ktxVersion"
+        compile "io.github.libktx:ktx-log:$ktxVersion"
     }
 }
 
